# nosferatu

./: .dockerignore  .env  .flake8  .gitignore  README.md  button.py  config.json  config.py  docker-compose.yml  dockerfile  garage_pi.py  garage_pi.service  nginx.conf  nosferatu.py  nosferatu.service  pyproject.toml  requirements.txt  wsgi.py
boot/: wpa_supplicant.conf
nosferatu/: __init__.py  auth.py  db.py  scheduler.py  schema.sql  wemos.py
nosferatu/models/: devices.py
nosferatu/templates/: base.html  footer.html  header.html  index.html  privacy.html
nosferatu/templates/auth/: login.html
nosferatu/templates/wemos/: list.html
templates/: base.html  footer.html  header.html  index.html  privacy.html
