[project]
name = "nosferatu"
version = "0.0.0"
requires-python = ">=3.11"
authors = [
    {name = "Thomas Forte", email = "5710966+thomas-forte@users.noreply.github.com"},
]
description = "Professional button clicker"
readme = "README.md"
license = {text = "MIT License"}

[tool.black]
line-length = 120
