[project]
name = "nosferatu"
version = "1.0.0"
description = "Professional button clicker"
authors = [
    {name = "Thomas Forte", email = "5710966+thomas-forte@users.noreply.github.com"},
]
license = {text = "MIT License"}

requires-python = ">=3.11"
readme = "README.md"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 120
